# chess_bot

./: .clang-format  .clang-tidy  .gitignore  Board.cpp  Board.h  CMakeLists.txt  Makefile  README.md  chessbot
include/: Board.h  Engine.h
src/: Board.cpp  Engine.cpp  main.cpp
